ipc/ipdl/test/ipdl/error/structRedecl.ipdl
struct Redecl {
    int a;
    double a;
};

protocol structRedecl {
child: async __delete__();
};
